<resources>
    <string name="app_name">Homework three</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide_button">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus_button">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus_button">+</string>
    <string name="point_button">.</string>
    <string name="_0">0</string>
    <string name="equals_button">=</string>
    <string name="multiply_button">*</string>
    <string name="ac">AC</string>
    <string name="plusOrMinus">-/+</string>
    <string name="choose_theme">Выбор темы</string>
    <string name="theme_1">Тема 1</string>
    <string name="theme_2">Тема 2</string>
    <string name="Default_theme">Стандартная тема</string>
    <string name="return_to">Возврат к калькулятору</string>
</resources>