<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/return_to"
        android:text="@string/return_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_default_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Default_theme">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_one_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_1">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_two_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_2">

        </com.google.android.material.radiobutton.MaterialRadioButton>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>